src/objects/Negotiated_Product__c.object
<CustomObject>
    <description>Products that a Buyer has approved from the entire product list.
Products have a negotiated price.</description>
    <fields>
        <fullName>Buyer__c</fullName>
        <label>Buyer</label>
        <referenceTo>Buyer__c</referenceTo>
        <relationshipLabel>Negotiated Products</relationshipLabel>
        <relationshipName>Negotiated_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Negotiated_Price__c</fullName>
        <label>Negotiated Price</label>
        <precision>14</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Price_Per_Unit__c</fullName>
        <formula>Product__r.Price_Display__c</formula>
        <inlineHelpText>Original Price in the public catalog</inlineHelpText>
        <label>Original Price Per Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Display__c</fullName>
        <formula>TEXT(Negotiated_Price__c) + &apos; &apos; + TEXT(Product__r.Currency__c) + IF(Product__r.Unit_Text__c &lt;&gt; &apos;Each&apos;, &apos; per &apos;, &apos;&apos;) + IF(Product__r.Price_Unit__c &gt; 1, TEXT(Product__r.Price_Unit__c), &apos;&apos;) + &apos; &apos; + Product__r.Unit_Text__c</formula>
        <inlineHelpText>Negotiated Price</inlineHelpText>
        <label>Price Per Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description__c</formula>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>SicProduct__c</referenceTo>
        <relationshipLabel>Negotiated Prices</relationshipLabel>
        <relationshipName>Negotiated_Prices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Negotiated Product</label>
    <nameField>
        <displayFormat>NP-{00000}</displayFormat>
        <label>Negotiated Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiated Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>